# autonom_rover

./: CMakeLists.txt  README.md  autonomous_rover.urdf  package.xml
autonom_rover/: CMakeLists.txt
autonom_rover/description/: example_gazebo.xacro  general_include.xacro  rover.urdf.xacro
autonom_rover/launch/: rsp_sim.launch.py
config/: my_controllers.yaml
description/: autonomous_rover.urdf.xacro  autonomous_rover.xacro  example_gazebo.xacro  gazebo_control.xacro  general_include.xacro  lidar.xacro  ros2_control.xacro  rover.urdf.xacro  rover.xacro  rover_backup.xacro.urdf
launch/: rsp.launch.py  rsp_sim.launch.py
other/: autonomous_rover_chain.gv  view_rover.rviz
